# snake-case-rename

./: Cargo.toml  Makefile  README.md
src/: arg.rs  file.rs  lib.rs  main.rs  punct.rs  result.rs
